--- a/params/experiment_params.yaml
+++ b/params/experiment_params.yaml
@@ -21,7 +21,7 @@ controller:
     P: -0.03
     I: 0.0
     D: 0.0
-    he_ratio: 0.5 # = approx 0.016 / 0.03
+    he_ratio: 0.5
     input_constraints: [-1, 1]
   speed:
     low_u: 0.0
@@ -29,14 +29,15 @@ controller:
     nominal_u: 0.5
     low_speed: 6.0
     high_speed: 20.0
-    input_constraints: [-1, 1]
+    input_constraints: [0, 1]
 
 logging:
+  log_data: True
   normalization:
     cte_constant: 10.0
     he_constant: 30.0
   output_dir: "../Xplane-data-dir/xplane-asl-test/taxinet-03-06-23"
 
 state_estimation:
-  use_taxinet: True
+  estimator: "taxinet"
   model_file: "data/models/taxinet03-02_14-53.nn"
