--- a/params/simulator_params.yaml
+++ b/params/simulator_params.yaml
@@ -1,8 +1,8 @@
 simulator:
   sim_speed: 1.0
-  time_step: 1.0
+  time_step: 0.25
   starting_position_pct: 0.5
-  ending_position_pct: 20.0
+  ending_position_pct: 40.0
   max_episode_time: 60.0
   episode_pause_time: 5.0
   runway_length: 2982.0
@@ -29,7 +29,7 @@ screenshot_camera:
   padding: 100 #crop by x pixles to cut off window ribbons
   height: 200
   width: 360
-  toolbar_crop_pixels: 230
+  toolbar_crop_pixels: 230 #575 #690 #
   corruption_types: 
     - "None"
     - "Noise"
