--- a/params/experiment_params.yaml
+++ b/params/experiment_params.yaml
@@ -1,11 +1,11 @@
 
 initial_position:
-  he_range: [-20, 20]
-  cte_range: [-6, 6]
+  he_range: [-3, 3]
+  cte_range: [-0.5, .5]
 
-num_episodes: 200
+num_episodes: 1
 
-weather_types: [0, 1, 2, 3, 4]
+weather_types: [4] #[0, 1, 2, 3, 4]
 
 ood:
   corruption:
@@ -15,7 +15,9 @@ ood:
     # - "Motion Blur"
     # - "Rain and Motion Blur"
     # - "Snow"
-  experiment_time_range: [8,22]
+    # - "Snowing"
+  transient_time_range: [20, 40]
+  experiment_time_range: [16,16.1]
 
 controller:
   type: "xplane_controller"
@@ -33,14 +35,14 @@ controller:
     low_speed: 3.0
     high_speed: 5.0
     input_constraints: [0, 1]
-    
+
 logging:
   log_data: False
   use_wandb: False
   normalization:
     cte_constant: 10.0
     he_constant: 30.0
-  output_dir: "../Xplane-data-dir/xplane-asl-test/taxinet-03-09-23"
+  output_dir: "../Xplane-data-dir/xplane-asl-test/test-transients-6"
 
 debug:
   perception: True
