working high-speed-taxiing with convnet

--- a/params/experiment_params.yaml
+++ b/params/experiment_params.yaml
@@ -5,38 +5,38 @@ initial_position:
 
 num_episodes: 1
 
-weather_types: [0, 1, 2, 3, 4] # see simulator params for labels
+weather_types: [0] # 1, 2, 3, 4] # see simulator params for labels
 
 ood:
   corruption:
     - "None"
-    - "Noise"
-    - "Rain"
-    - "Motion Blur"
-    - "Rain and Motion Blur"
-    - "Snow"
-    - "Snowing"
+    # - "Noise"
+    # - "Rain"
+    # - "Motion Blur"
+    # - "Rain and Motion Blur"
+    # - "Snow"
+    # - "Snowing"
   transient_time_range: 
-    start_time_range: [20,25] # episode time in seconds, entire episode duration if undefined
+    start_time_range: [10,15] # episode time in seconds, entire episode duration if undefined
     end_time_range: [35,40] # episode time in seconds, entire episode duration if undefined
     buildup_time_range: [5,5] # duration in seconds, instantaneous if undefined
-  experiment_time_range: [8,18] # time in hours
+  experiment_time_range: [8,10] # time in hours
 
 controller:
   type: "xplane_controller"
   steering: 
-    P: -0.015
-    I: -0.00
-    D: -0.00
+    P: -0.06
+    I: -0.0
+    D: -0.005
     he_ratio: .5
     bias: 0.008
     input_constraints: [-1, 1]
   speed:
-    low_u: 0.0
-    high_u: 0.2
-    nominal_u: 0.1
-    low_speed: 3.0
-    high_speed: 5.0
+    low_u: 0.6
+    high_u: 0.9
+    nominal_u: 0.8
+    low_speed: 20.0
+    high_speed: 30.0
     input_constraints: [0, 1]
 
 logging:
@@ -51,7 +51,7 @@ debug:
 
 state_estimation:
   estimator: "taxinet"
-  model_file: "data/models/taxinet03-09_12-55.pt"
+  model_file: "data/models/taxinet_conv05-23_10-05.pt" #taxinet03-09_12-55.pt"
 
 runtime_monitor:
   monitor: "autoencoder"
