--- a/params/simulator_params.yaml
+++ b/params/simulator_params.yaml
@@ -1,6 +1,6 @@
 simulator:
   sim_speed: 1.0
-  time_step: 1.0
+  time_step: .5
   starting_position_pct: 3.0
   ending_position_pct: 40.0
   max_episode_time: 60.0
